crates/model-ai/src/snapshots/model_ai__model_generation_tests__casual_commits_files_only.snap
---
source: crates/model-ai/src/model_generation_tests.rs
description: Generated branch names for casual_commits in files_only mode
---
scenario: casual_commits
mode: files_only
commits_count: 3
files_count: 5
model_results:
  - model: Qwen25Coder05B
    prompt: "Create one branch name for all commits (max 50 characters):\n    \nExample:\nUpdate payment gateway\n\nA       auth.js\nM       payment.js\n\nAdd unit tests for payment flow\n\nA       test-login.js\n\nUpdate API documentation\n\nM       README.md\n\nBranch name: update-payment-gateway-tests-docs\n\nYour turn:\nWIP: working on search feature\nA\tsrc/search/index.js\nA\tsrc/search/filter.js\n\nFix typo in variable name\nM\tsrc/utils/helpers.rs\n\nCode cleanup and formatting\nM\tsrc/lib.rs\nM\tsrc/main.rs\n\nBranch name:"
    generated_branch_name: update-search-feature
    generation_time_ms: 1000
    confidence: 0.95000005
  - model: Qwen3_06B
    prompt: "Create one branch name for all commits (max 50 characters):\n    \nExample:\nUpdate payment gateway\n\nA       auth.js\nM       payment.js\n\nAdd unit tests for payment flow\n\nA       test-login.js\n\nUpdate API documentation\n\nM       README.md\n\nBranch name: update-payment-gateway-tests-docs\n\nYour turn:\nWIP: working on search feature\nA\tsrc/search/index.js\nA\tsrc/search/filter.js\n\nFix typo in variable name\nM\tsrc/utils/helpers.rs\n\nCode cleanup and formatting\nM\tsrc/lib.rs\nM\tsrc/main.rs\n\nBranch name:"
    generated_branch_name: fix-typo-in-variable-name
    generation_time_ms: 1000
    confidence: 0.95000005
  - model: Qwen3_17B
    prompt: "<|im_start|>system\nYou are a Git branch name generator. Output only the branch name - no explanations, no thinking, no extra text. Use lowercase letters, numbers, and hyphens only. Maximum 50 characters.<|im_end|>\n<|im_start|>user\nWIP: working on search feature\nA\tsrc/search/index.js\nA\tsrc/search/filter.js\n\nFix typo in variable name\nM\tsrc/utils/helpers.rs\n\nCode cleanup and formatting\nM\tsrc/lib.rs\nM\tsrc/main.rs<|im_end|>\n<|im_start|>assistant<think></think>"
    generated_branch_name: wip-search-fix-typo-code-clean
    generation_time_ms: 1000
    confidence: 0.95000005
