crates/model-ai/src/snapshots/model_ai__model_generation_tests__casual_commits_full_diff.snap
---
source: crates/model-ai/src/model_generation_tests.rs
description: Generated branch names for casual_commits in full_diff mode
---
scenario: casual_commits
mode: full_diff
commits_count: 3
files_count: 5
model_results:
  - model: Qwen3_17B
    prompt: "<|im_start|>system\nYou are a Git branch name generator. Output only the branch name. Use lowercase letters, numbers, and hyphens only. Maximum 50 characters. /no_think<|im_end|>\n<|im_start|>user\nWIP: working on search feature\nA\tsrc/search/index.js\nA\tsrc/search/filter.js\n\nFix typo in variable name\nM\tsrc/utils/helpers.rs\n\nCode cleanup and formatting\nM\tsrc/lib.rs\nM\tsrc/main.rs<|im_end|>\n<|im_start|>assistant"
    generated_branch_name: wip-search-feature
    generation_time_ms: 8000
