crates/model-ai/src/snapshots/model_ai__model_generation_tests__jwt_auth_feature_files_only.snap
---
source: crates/model-ai/src/model_generation_tests.rs
description: Generated branch names for jwt_auth_feature in files_only mode
---
scenario: jwt_auth_feature
mode: files_only
commits_count: 3
files_count: 4
model_results:
  - model: Qwen3_17B
    prompt: "<|im_start|>system\nYou are a Git branch name generator. Output only the branch name. Use lowercase letters, numbers, and hyphens only. Maximum 50 characters. /no_think<|im_end|>\n<|im_start|>user\nfeat(auth): implement JWT token validation middleware\nM\tsrc/middleware/auth.rs\nA\tsrc/middleware/mod.rs\n\ntest(auth): add comprehensive JWT validation tests\nA\ttests/auth_test.rs\n\ndocs(auth): update API documentation for JWT endpoints\nM\tdocs/api/auth.md<|im_end|>\n<|im_start|>assistant"
    generated_branch_name: feat-auth-jwt-validation
    generation_time_ms: 6000
