crates/model-ai/src/snapshots/model_ai__model_generation_tests__large_feature_files_only.snap
---
source: crates/model-ai/src/model_generation_tests.rs
description: Generated branch names for large_feature in files_only mode
---
scenario: large_feature
mode: files_only
commits_count: 5
files_count: 50
model_results: []
