crates/model-ai/src/snapshots/model_ai__model_generation_tests__large_feature_full_diff.snap
---
source: crates/model-ai/src/model_generation_tests.rs
description: Generated branch names for large_feature in full_diff mode
---
scenario: large_feature
mode: full_diff
commits_count: 5
files_count: 50
model_results:
  - model: Qwen25Coder05B
    prompt: "Create one branch name for all commits (max 50 characters):\n    \nExample:\nUpdate payment gateway\n\nA       auth.js\nM       payment.js\n\nAdd unit tests for payment flow\n\nA       test-login.js\n\nUpdate API documentation\n\nM       README.md\n\nBranch name: update-payment-gateway-tests-docs\n\nYour turn:\nPROJ-1234 feat: initial user management module setup\nM\tsrc/users/module_0/file_0.rs\nM\tsrc/users/module_0/file_1.rs\nM\tsrc/users/module_0/file_2.rs\nM\tsrc/users/module_0/file_3.rs\nM\tsrc/users/module_0/file_4.rs\nM\tsrc/users/module_0/file_5.rs\nM\tsrc/users/module_0/file_6.rs\nM\tsrc/users/module_0/file_7.rs\nM\tsrc/users/module_0/file_8.rs\nM\tsrc/users/module_0/file_9.rs\n\nPROJ-1234 feat: add user CRUD operations\nM\tsrc/users/module_1/file_0.rs\nM\tsrc/users/module_1/file_1.rs\nM\tsrc/users/module_1/file_2.rs\nM\tsrc/users/module_1/file_3.rs\nM\tsrc/users/module_1/file_4.rs\nM\tsrc/users/module_1/file_5.rs\nM\tsrc/users/module_1/file_6.rs\nM\tsrc/users/module_1/file_7.rs\nM\tsrc/users/module_1/file_8.rs\nM\tsrc/users/module_1/file_9.rs\n\nPROJ-1234 feat: implement role-based access control\nM\tsrc/users/module_2/file_0.rs\nM\tsrc/users/module_2/file_1.rs\nM\tsrc/users/module_2/file_2.rs\nM\tsrc/users/module_2/file_3.rs\nM\tsrc/users/module_2/file_4.rs\nM\tsrc/users/module_2/file_5.rs\nM\tsrc/users/module_2/file_6.rs\nM\tsrc/users/module_2/file_7.rs\nM\tsrc/users/module_2/file_8.rs\nM\tsrc/users/module_2/file_9.rs\n\nPROJ-1234 test: comprehensive test suite for user management\nM\tsrc/users/module_3/file_0.rs\nM\tsrc/users/module_3/file_1.rs\nM\tsrc/users/module_3/file_2.rs\nM\tsrc/users/module_3/file_3.rs\nM\tsrc/users/module_3/file_4.rs\nM\tsrc/users/module_3/file_5.rs\nM\tsrc/users/module_3/file_6.rs\nM\tsrc/users/module_3/file_7.rs\nM\tsrc/users/module_3/file_8.rs\nM\tsrc/users/module_3/file_9.rs\n\nPROJ-1234 docs: API documentation and migration guide\nM\tsrc/users/module_4/file_0.rs\nM\tsrc/users/module_4/file_1.rs\nM\tsrc/users/module_4/file_2.rs\nM\tsrc/users/module_4/file_3.rs\nM\tsrc/users/module_4/file_4.rs\nM\tsrc/users/module_4/file_5.rs\nM\tsrc/users/module_4/file_6.rs\nM\tsrc/users/module_4/file_7.rs\nM\tsrc/users/module_4/file_8.rs\nM\tsrc/users/module_4/file_9.rs\n\nBranch name:"
    generated_branch_name: update-user-management-docs
    generation_time_ms: 1000
    confidence: 0.95000005
  - model: Qwen3_06B
    prompt: "Create one branch name for all commits (max 50 characters):\n    \nExample:\nUpdate payment gateway\n\nA       auth.js\nM       payment.js\n\nAdd unit tests for payment flow\n\nA       test-login.js\n\nUpdate API documentation\n\nM       README.md\n\nBranch name: update-payment-gateway-tests-docs\n\nYour turn:\nPROJ-1234 feat: initial user management module setup\nM\tsrc/users/module_0/file_0.rs\nM\tsrc/users/module_0/file_1.rs\nM\tsrc/users/module_0/file_2.rs\nM\tsrc/users/module_0/file_3.rs\nM\tsrc/users/module_0/file_4.rs\nM\tsrc/users/module_0/file_5.rs\nM\tsrc/users/module_0/file_6.rs\nM\tsrc/users/module_0/file_7.rs\nM\tsrc/users/module_0/file_8.rs\nM\tsrc/users/module_0/file_9.rs\n\nPROJ-1234 feat: add user CRUD operations\nM\tsrc/users/module_1/file_0.rs\nM\tsrc/users/module_1/file_1.rs\nM\tsrc/users/module_1/file_2.rs\nM\tsrc/users/module_1/file_3.rs\nM\tsrc/users/module_1/file_4.rs\nM\tsrc/users/module_1/file_5.rs\nM\tsrc/users/module_1/file_6.rs\nM\tsrc/users/module_1/file_7.rs\nM\tsrc/users/module_1/file_8.rs\nM\tsrc/users/module_1/file_9.rs\n\nPROJ-1234 feat: implement role-based access control\nM\tsrc/users/module_2/file_0.rs\nM\tsrc/users/module_2/file_1.rs\nM\tsrc/users/module_2/file_2.rs\nM\tsrc/users/module_2/file_3.rs\nM\tsrc/users/module_2/file_4.rs\nM\tsrc/users/module_2/file_5.rs\nM\tsrc/users/module_2/file_6.rs\nM\tsrc/users/module_2/file_7.rs\nM\tsrc/users/module_2/file_8.rs\nM\tsrc/users/module_2/file_9.rs\n\nPROJ-1234 test: comprehensive test suite for user management\nM\tsrc/users/module_3/file_0.rs\nM\tsrc/users/module_3/file_1.rs\nM\tsrc/users/module_3/file_2.rs\nM\tsrc/users/module_3/file_3.rs\nM\tsrc/users/module_3/file_4.rs\nM\tsrc/users/module_3/file_5.rs\nM\tsrc/users/module_3/file_6.rs\nM\tsrc/users/module_3/file_7.rs\nM\tsrc/users/module_3/file_8.rs\nM\tsrc/users/module_3/file_9.rs\n\nPROJ-1234 docs: API documentation and migration guide\nM\tsrc/users/module_4/file_0.rs\nM\tsrc/users/module_4/file_1.rs\nM\tsrc/users/module_4/file_2.rs\nM\tsrc/users/module_4/file_3.rs\nM\tsrc/users/module_4/file_4.rs\nM\tsrc/users/module_4/file_5.rs\nM\tsrc/users/module_4/file_6.rs\nM\tsrc/users/module_4/file_7.rs\nM\tsrc/users/module_4/file_8.rs\nM\tsrc/users/module_4/file_9.rs\n\nBranch name:"
    generated_branch_name: update-user-management
    generation_time_ms: 1000
    confidence: 0.95000005
  - model: Qwen3_17B
    prompt: "<|im_start|>system\nYou are a Git branch name generator. Output only the branch name - no explanations, no thinking, no extra text. Use lowercase letters, numbers, and hyphens only. Maximum 50 characters.<|im_end|>\n<|im_start|>user\nPROJ-1234 feat: initial user management module setup\nM\tsrc/users/module_0/file_0.rs\nM\tsrc/users/module_0/file_1.rs\nM\tsrc/users/module_0/file_2.rs\nM\tsrc/users/module_0/file_3.rs\nM\tsrc/users/module_0/file_4.rs\nM\tsrc/users/module_0/file_5.rs\nM\tsrc/users/module_0/file_6.rs\nM\tsrc/users/module_0/file_7.rs\nM\tsrc/users/module_0/file_8.rs\nM\tsrc/users/module_0/file_9.rs\n\nPROJ-1234 feat: add user CRUD operations\nM\tsrc/users/module_1/file_0.rs\nM\tsrc/users/module_1/file_1.rs\nM\tsrc/users/module_1/file_2.rs\nM\tsrc/users/module_1/file_3.rs\nM\tsrc/users/module_1/file_4.rs\nM\tsrc/users/module_1/file_5.rs\nM\tsrc/users/module_1/file_6.rs\nM\tsrc/users/module_1/file_7.rs\nM\tsrc/users/module_1/file_8.rs\nM\tsrc/users/module_1/file_9.rs\n\nPROJ-1234 feat: implement role-based access control\nM\tsrc/users/module_2/file_0.rs\nM\tsrc/users/module_2/file_1.rs\nM\tsrc/users/module_2/file_2.rs\nM\tsrc/users/module_2/file_3.rs\nM\tsrc/users/module_2/file_4.rs\nM\tsrc/users/module_2/file_5.rs\nM\tsrc/users/module_2/file_6.rs\nM\tsrc/users/module_2/file_7.rs\nM\tsrc/users/module_2/file_8.rs\nM\tsrc/users/module_2/file_9.rs\n\nPROJ-1234 test: comprehensive test suite for user management\nM\tsrc/users/module_3/file_0.rs\nM\tsrc/users/module_3/file_1.rs\nM\tsrc/users/module_3/file_2.rs\nM\tsrc/users/module_3/file_3.rs\nM\tsrc/users/module_3/file_4.rs\nM\tsrc/users/module_3/file_5.rs\nM\tsrc/users/module_3/file_6.rs\nM\tsrc/users/module_3/file_7.rs\nM\tsrc/users/module_3/file_8.rs\nM\tsrc/users/module_3/file_9.rs\n\nPROJ-1234 docs: API documentation and migration guide\nM\tsrc/users/module_4/file_0.rs\nM\tsrc/users/module_4/file_1.rs\nM\tsrc/users/module_4/file_2.rs\nM\tsrc/users/module_4/file_3.rs\nM\tsrc/users/module_4/file_4.rs\nM\tsrc/users/module_4/file_5.rs\nM\tsrc/users/module_4/file_6.rs\nM\tsrc/users/module_4/file_7.rs\nM\tsrc/users/module_4/file_8.rs\nM\tsrc/users/module_4/file_9.rs<|im_end|>\n<|im_start|>assistant<think></think>"
    generated_branch_name: proj-1234-feat-initial-user-management
    generation_time_ms: 1000
    confidence: 0.85
