crates/model-ai/src/snapshots/model_ai__model_generation_tests__mixed_format_files_only.snap
---
source: crates/model-ai/src/model_generation_tests.rs
description: Generated branch names for mixed_format in files_only mode
---
scenario: mixed_format
mode: files_only
commits_count: 4
files_count: 5
model_results:
  - model: Qwen3_17B
    prompt: "<|im_start|>system\nYou are a Git branch name generator. Output only the branch name. Use lowercase letters, numbers, and hyphens only. Maximum 50 characters. /no_think<|im_end|>\n<|im_start|>user\nfeat: add dark mode support\nM\tsrc/components/theme.tsx\nA\tstyles/dark.css\n\nFix CSS issues in mobile view\nM\tstyles/mobile.css\n\nUpdate README with new instructions\nM\tREADME.md\n\nrefactor: simplify theme switching logic\nM\tsrc/hooks/useTheme.ts<|im_end|>\n<|im_start|>assistant"
    generated_branch_name: feat-dark-mode-refactor-theme-switching-fix-mobile
    generation_time_ms: 6000
