crates/model-ai/src/snapshots/model_ai__model_generation_tests__mixed_format_full_diff.snap
---
source: crates/model-ai/src/model_generation_tests.rs
description: Generated branch names for mixed_format in full_diff mode
---
scenario: mixed_format
mode: full_diff
commits_count: 4
files_count: 5
model_results:
  - model: Qwen25Coder05B
    prompt: "Create one branch name for all commits (max 50 characters):\n    \nExample:\nUpdate payment gateway\n\nA       auth.js\nM       payment.js\n\nAdd unit tests for payment flow\n\nA       test-login.js\n\nUpdate API documentation\n\nM       README.md\n\nBranch name: update-payment-gateway-tests-docs\n\nYour turn:\nfeat: add dark mode support\nM\tsrc/components/theme.tsx\nA\tstyles/dark.css\n\nFix CSS issues in mobile view\nM\tstyles/mobile.css\n\nUpdate README with new instructions\nM\tREADME.md\n\nrefactor: simplify theme switching logic\nM\tsrc/hooks/useTheme.ts\n\nBranch name:"
    generated_branch_name: update-readme
    generation_time_ms: 1000
    confidence: 0.95000005
  - model: Qwen3_06B
    prompt: "Create one branch name for all commits (max 50 characters):\n    \nExample:\nUpdate payment gateway\n\nA       auth.js\nM       payment.js\n\nAdd unit tests for payment flow\n\nA       test-login.js\n\nUpdate API documentation\n\nM       README.md\n\nBranch name: update-payment-gateway-tests-docs\n\nYour turn:\nfeat: add dark mode support\nM\tsrc/components/theme.tsx\nA\tstyles/dark.css\n\nFix CSS issues in mobile view\nM\tstyles/mobile.css\n\nUpdate README with new instructions\nM\tREADME.md\n\nrefactor: simplify theme switching logic\nM\tsrc/hooks/useTheme.ts\n\nBranch name:"
    generated_branch_name: refactor-theme-switching
    generation_time_ms: 1000
    confidence: 0.95000005
  - model: Qwen3_17B
    prompt: "<|im_start|>system\nYou are a Git branch name generator. Output only the branch name - no explanations, no thinking, no extra text. Use lowercase letters, numbers, and hyphens only. Maximum 50 characters.<|im_end|>\n<|im_start|>user\nfeat: add dark mode support\nM\tsrc/components/theme.tsx\nA\tstyles/dark.css\n\nFix CSS issues in mobile view\nM\tstyles/mobile.css\n\nUpdate README with new instructions\nM\tREADME.md\n\nrefactor: simplify theme switching logic\nM\tsrc/hooks/useTheme.ts<|im_end|>\n<|im_start|>assistant<think></think>"
    generated_branch_name: dark-mode
    generation_time_ms: 1000
    confidence: 0.95000005
