crates/model-ai/src/snapshots/model_ai__model_generation_tests__non_conventional_full_diff.snap
---
source: crates/model-ai/src/model_generation_tests.rs
description: Generated branch names for non_conventional in full_diff mode
---
scenario: non_conventional
mode: full_diff
commits_count: 3
files_count: 5
model_results:
  - model: Qwen3_17B
    prompt: "<|im_start|>system\nYou are a Git branch name generator. Output only the branch name. Use lowercase letters, numbers, and hyphens only. Maximum 50 characters. /no_think<|im_end|>\n<|im_start|>user\nUpdate dependencies to latest versions\nM\tpackage.json\nM\tCargo.lock\n\nFix broken tests in user module\nM\ttests/user_test.rs\n\nAdd error handling for edge cases\nM\tsrc/handlers/error.rs\nA\tsrc/utils/validation.rs<|im_end|>\n<|im_start|>assistant"
    generated_branch_name: feat-update-dependencies
    generation_time_ms: 6000
