crates/model-ai/src/snapshots/model_ai__model_generation_tests__redis_memory_fix_full_diff.snap
---
source: crates/model-ai/src/model_generation_tests.rs
description: Generated branch names for redis_memory_fix in full_diff mode
---
scenario: redis_memory_fix
mode: full_diff
commits_count: 2
files_count: 1
model_results:
  - model: Qwen3_17B
    prompt: "<|im_start|>system\nYou are a Git branch name generator. Output only the branch name. Use lowercase letters, numbers, and hyphens only. Maximum 50 characters. /no_think<|im_end|>\n<|im_start|>user\nfix(cache): resolve memory leak in Redis connection pool\nM\tsrc/cache/redis_pool.rs\n\nperf(cache): optimize connection pooling strategy<|im_end|>\n<|im_start|>assistant"
    generated_branch_name: fix-cache-redis-pool
    generation_time_ms: 4000
